--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,8 @@
           <script src="app/account/settings/settings.js"></script>
           <script src="app/account/signup/signup.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/create/create.js"></script>
+          <script src="app/forms/forms.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
