--- a/client/app/forms/forms.html
+++ b/client/app/forms/forms.html
@@ -4,12 +4,29 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <ul>
-      <li ng-repeat="form in forms">
-          {{form}}
-          <br>
-      </li>
-    </ul>
+
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>
+            #
+          </th>
+          <th> Certification Name </th>
+          <th> Status </th>
+          <th> Created by </th>
+          <th> </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="form in forms">
+          <td> {{$index}}</td>
+          <td> <a href="/forms/edit/{{form._id}}">{{form.name}}</a></td>
+          <td> {{form.status}}</td>
+          <td> {{form.author.name}}</td>
+          <td> <a href="" ng-click="removeForm(form)">Remove</a></td>
+        </tr>
+      </tbody>
+    </table>
 
 
   <form class="thing-form">
