--- a/client/app/forms/forms.html
+++ b/client/app/forms/forms.html
@@ -30,7 +30,7 @@
 
 
   <form class="thing-form">
-    <label>Syncs in realtime across clients</label>
+    <label>Add new form</label>
     <p class="input-group">
       <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="newform">
       <span class="input-group-btn">
