--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,7 @@
           <script src="app/main/main.js"></script>
           <script src="app/options/options.js"></script>
           <script src="app/prevElement/prevElement.js"></script>
+          <script src="app/sectionData/sectionData.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
           <script src="components/modal/modal.js"></script>
