Adding the login page

--- a/client/app/forms/forms.html
+++ b/client/app/forms/forms.html
@@ -29,19 +29,15 @@
     </table>
 
 
-  <form class="thing-form">
+  <form class="form">
     <label>Add new form</label>
     <p class="input-group">
       <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="newform">
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="addform()">Add New</button>
+        <button type="submit" class="btn btn-primary" ng-click="addform()">Add new form</button>
       </span>
     </p>
   </form>
-
-
-    <button class="btn btn-success"> Add new form </button>
-
 
   </div>
 </div>
