--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -3,6 +3,9 @@
 <!-- <div ng-include="'components/navbar/navbar.html'"></div> -->
 <div class="container login-container">
   <div class="row">
+    <div class="login-logo">
+      <img src="assets/images/logo.svg" alt="" >
+    </div>
     <div class="col-sm-12">
       <h3>Login</h3>
     </div>
