Adding the design

--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -8,8 +8,7 @@
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="register(form)" novalidate>
 
-        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
-                                            'has-error': form.name.$invalid && submitted }">
+        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted, 'has-error': form.name.$invalid && submitted }">
           <label>Name</label>
 
           <input type="text" name="name" class="form-control" ng-model="user.name"
