--- a/client/index.html
+++ b/client/index.html
@@ -72,6 +72,7 @@
           <script src="app/account/signup/signup.js"></script>
           <script src="app/admin/admin.js"></script>
           <script src="app/create/create.js"></script>
+          <script src="app/fieldElement/fieldElement.js"></script>
           <script src="app/fields/fields.js"></script>
           <script src="app/forms/forms.js"></script>
           <script src="app/main/main.js"></script>
