--- a/client/app/prevElement/prevElement.html
+++ b/client/app/prevElement/prevElement.html
@@ -1,4 +1,4 @@
-<div class"js_form_template formShow" ng-switch="field.type">
+<div class="js_form_template formShow" ng-switch="field.type">
   <div data-option="text" ng-switch-when="text">
     <div class="form-group">
       <label for="{{'form_'+form.id+'_field_'+field.id}}"><span ng-bind-html="field.label"></span></label>
@@ -8,7 +8,6 @@
     </div>
   </div>
 
-
   <div data-option="textarea" ng-switch-when="textarea">
     <div class="form-group">
       <label for="{{'form_'+form.id+'_field_'+field.id}}"><span ng-bind-html="field.label"></span></label>
@@ -17,7 +16,6 @@
       <small class="help-block" ng-bind-html="field.help_text"></small>
     </div>
   </div>
-
 
   <div data-option="select" ng-switch-when="select">
     <div class="form-group">
