--- a/client/app/prevElement/prevElement.html
+++ b/client/app/prevElement/prevElement.html
@@ -1,27 +1,27 @@
 <div class="js_form_template formShow" ng-switch="field.type">
   <div data-option="text" ng-switch-when="text">
     <div class="form-group">
-      <label for="{{'form_'+form.id+'_field_'+field.id}}"><span ng-bind-html="field.label"></span></label>
+      <label for="{{'form_'+form.id+'_field_'+field._id}}"><span ng-bind-html="field.label"></span></label>
       <abbr title="Required" ng-if="field.required"> *</abbr>
-      <input type="text" class="form-control" ng-model="field.response" id="{{'form_'+form.id+'_field_'+field.id}}">
+      <input type="text" class="form-control" ng-model="field.response" id="{{'form_'+form.id+'_field_'+ field._id}}">
       <small class="help-block" ng-bind-html="field.help_text"></small>
     </div>
   </div>
 
   <div data-option="textarea" ng-switch-when="textarea">
     <div class="form-group">
-      <label for="{{'form_'+form.id+'_field_'+field.id}}"><span ng-bind-html="field.label"></span></label>
+      <label for="{{'form_'+form.id+'_field_'+field._id}}"><span ng-bind-html="field.label"></span></label>
       <abbr title="Required" ng-if="field.required"> *</abbr>
-      <textarea class="form-control" ng-model="field.response" id="{{'form_'+form.id+'_field_'+field.id}}"></textarea>
+      <textarea class="form-control" ng-model="field.response" id="{{'form_'+form.id+'_field_'+field._id}}"></textarea>
       <small class="help-block" ng-bind-html="field.help_text"></small>
     </div>
   </div>
 
   <div data-option="select" ng-switch-when="select">
     <div class="form-group">
-      <label for="{{'form_'+form.id+'_field_'+field.id}}"><span ng-bind-html="field.label"></span></label>
+      <label for="{{'form_'+form.id+'_field_'+field._id}}"><span ng-bind-html="field.label"></span></label>
       <abbr title="Required" ng-if="field.required"> *</abbr>
-        <select ng-model="field.response" id="{{'form_'+form.id+'_field_'+field.id}}" ng-options="choice.label for choice in field.choices" class="form-control">
+        <select ng-model="field.response" id="{{'form_'+form.id+'_field_'+field._id}}" ng-options="choice.label for choice in field.choices" class="form-control">
           <option value="">– Select one –</option>
         </select>
       <small class="help-block" ng-bind-html="field.help_text"></small>
@@ -31,7 +31,7 @@
 
 
 <!--   br
-  select ng-model="field.response" id="{{'form_'+form.id+'_field_'+field.id}}" ng-options="choice.label for choice in field.choices"
+  select ng-model="field.response" id="{{'form_'+form.id+'_field_'+field._id}}" ng-options="choice.label for choice in field.choices"
     option value=""
       = _('views.common.select_one')
   span.help-block ng-bind-html="field.help_text"
@@ -55,11 +55,11 @@
 
   <div data-option="checkbox" ng-switch-when="checkbox">
     <div class="form-group">
-      <label for="{{'form_'+form.id+'_field_'+field.id}}"><span ng-bind-html="field.label"></span></label>
+      <label for="{{'form_'+form.id+'_field_'+field._id}}"><span ng-bind-html="field.label"></span></label>
       <abbr title="Required" ng-if="field.required"> *</abbr>
       <div class="inputLabel inline" ng-repeat="choice in field.choices">
-        <input type="checkBox" ng-model="choice.selected" value="{{choice.id}}" id="{{'form_'+form.id+'_field_'+field.id+'_choice_'+choice.id}}" />
-        <label ng-bind-html="choice.label" for="{{'form_'+form.id+'_field_'+field.id+'_choice_'+choice.id}}"></label>
+        <input type="checkBox" ng-model="choice.selected" value="{{choice.id}}" id="{{'form_'+form.id+'_field_'+field._id+'_choice_'+choice.id}}" />
+        <label ng-bind-html="choice.label" for="{{'form_'+form.id+'_field_'+field._id+'_choice_'+choice.id}}"></label>
       </div>
       <small class="help-block" ng-bind-html="field.help_text"></small>
     </div>
@@ -75,11 +75,11 @@
 
  <div data-option="radiobutton" ng-switch-when="radiobutton">
     <div class="form-group">
-      <label for="{{'form_'+form.id+'_field_'+field.id}}"><span ng-bind-html="field.label"></span></label>
+      <label for="{{'form_'+form.id+'_field_'+field._id}}"><span ng-bind-html="field.label"></span></label>
       <abbr title="Required" ng-if="field.required"> *</abbr>
       <div class="inputLabel inline" ng-repeat="choice in field.choices">
-        <input type="radio" name="{{'form_'+form.id+'_field_'+field.id}}" ng-model="choice.selected" value="{{choice.id}}" id="{{'form_'+form.id+'_field_'+field.id+'_choice_'+choice.id}}" />
-        <label ng-bind-html="choice.label" for="{{'form_'+form.id+'_field_'+field.id+'_choice_'+choice.id}}"></label>
+        <input type="radio" name="{{'form_'+form.id+'_field_'+field._id}}" ng-model="choice.selected" value="{{choice.id}}" id="{{'form_'+form.id+'_field_'+field._id+'_choice_'+choice.id}}" />
+        <label ng-bind-html="choice.label" for="{{'form_'+form.id+'_field_'+field._id+'_choice_'+choice.id}}"></label>
       </div>
       <small class="help-block" ng-bind-html="field.help_text"></small>
     </div>
