Adding the empty state

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600' rel='stylesheet' type='text/css'>
   </head>
   <body ng-app="greenApp">
     <!--[if lt IE 7]>
@@ -58,6 +59,10 @@
       <script src="bower_components/jquery-ui/jquery-ui.js"></script>
       <script src="bower_components/angular-ui-sortable/sortable.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
+      <script src="bower_components/ladda/js/spin.js"></script>
+      <script src="bower_components/ladda/js/ladda.js"></script>
+      <script src="bower_components/angular-ladda/dist/angular-ladda.min.js"></script>
+
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -75,6 +80,7 @@
           <script src="app/fieldElement/fieldElement.js"></script>
           <script src="app/fields/fields.js"></script>
           <script src="app/forms/forms.js"></script>
+          <script src="app/formshow/formshow.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/options/options.js"></script>
           <script src="app/prevElement/prevElement.js"></script>
