--- a/client/app/forms/forms.html
+++ b/client/app/forms/forms.html
@@ -1,9 +1,35 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container page-container">
-
 <div class="row">
   <div class="col-lg-12">
+    <h1 class="page-title"> Your Forms</h1>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-9 oh">
+    <form class="form">
+  <!--       <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="newform"> -->
+      <button type="submit" class="btn btn-primary" ng-click="addform()"> <em class="icon icon-plus"></em>  Add new form</button>
+    </form>
+
+  <div class="clearfix"></div>
+  <br>
+  <div ng-if="forms.length == 0">
+    <div class="empty forms-empty">
+      <img src="assets/images/empty/no_forms_text.svg" alt="" class="empty-hint">
+      <div class="empty-image">
+        <img src="assets/images/empty/no_forms.svg" alt="" class="empty">
+        <div class="empty-text">
+          Your don't have any forms right now!
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div ng-if="forms.length > 0">
+
     <table class="table table-striped">
       <thead>
         <tr>
@@ -35,16 +61,7 @@
       </tbody>
     </table>
 
-
-  <form class="form">
-    <label>Add new form</label>
-    <p class="input-group">
-      <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="newform">
-      <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="addform()">Add new form</button>
-      </span>
-    </p>
-  </form>
+</div>
 
   </div>
 </div>
