--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600' rel='stylesheet' type='text/css'>
   </head>
   <body ng-app="greenApp">
     <!--[if lt IE 7]>
